@@ -33,7 +33,10 @@ import org.openremote.manager.event.EventSubscriptionAuthorizer;
 import org.openremote.manager.gateway.GatewayService;
 import org.openremote.manager.security.ManagerIdentityService;
 import org.openremote.manager.web.ManagerWebService;
-import org.openremote.model.*;
+import org.openremote.model.Constants;
+import org.openremote.model.Container;
+import org.openremote.model.ContainerService;
+import org.openremote.model.PersistenceEvent;
 import org.openremote.model.asset.*;
 import org.openremote.model.asset.impl.GroupAsset;
 import org.openremote.model.attribute.Attribute;
@@ -163,14 +166,14 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
              boolean isAnonymous = auth == null;
              boolean isRestricted = identityService.getIdentityProvider().isRestrictedUser(auth);
              String userId = !isAnonymous ? auth.getUserId() : null;
-             String realm = requestRealm != null ? requestRealm : !isAnonymous ? auth.getAuthenticatedRealm() : null;
+             String realm = requestRealm != null ? requestRealm : !isAnonymous ? auth.getAuthenticatedRealmName() : null;
 
              if (realm == null) {
                  LOG.fine("Anonymous subscriptions must specify a realm");
                  return false;
              }
 
-             if (isAnonymous || (requestRealm != null && !requestRealm.equals(auth.getAuthenticatedRealm()))) {
+             if (isAnonymous || (requestRealm != null && !requestRealm.equals(auth.getAuthenticatedRealmName()))) {
                  // Users can only request public assets in different realms so force public events in the filter
                  filter.setPublicEvents(true);
              }
@@ -471,7 +474,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         boolean isRestricted = identityService.getIdentityProvider().isRestrictedUser(authContext);
 
         // Take realm from query, requestRealm or lastly auth context (super users can query with no realm)
-        String realm = query.tenant != null ? query.tenant.realm : requestRealm != null ? requestRealm : (!isSuperUser && authContext != null ? authContext.getAuthenticatedRealm() : null);
+        String realm = query.realm != null ? query.realm.name : requestRealm != null ? requestRealm : (!isSuperUser && authContext != null ? authContext.getAuthenticatedRealmName() : null);
 
         if (!isSuperUser) {
             if (TextUtil.isNullOrEmpty(realm)) {
@@ -504,20 +507,20 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 throw new IllegalStateException(msg);
             }
 
-            if (query.access != PUBLIC && !realm.equals(authContext.getAuthenticatedRealm())) {
+            if (query.access != PUBLIC && !realm.equals(authContext.getAuthenticatedRealmName())) {
                 String msg = "Realm must match authenticated realm for non public access queries";
                 LOG.finer(msg);
                 throw new IllegalStateException(msg);
             }
 
-            query.tenant = new TenantPredicate(realm);
+            query.realm = new RealmPredicate(realm);
 
             if (query.access == PROTECTED) {
                 query.userIds(authContext.getUserId());
             }
         }
 
-        if (!identityService.getIdentityProvider().isTenantActiveAndAccessible(authContext, realm)) {
+        if (!identityService.getIdentityProvider().isRealmActiveAndAccessible(authContext, realm)) {
             String msg = "Realm is not present or is inactive";
             LOG.finer(msg);
             throw new IllegalStateException(msg);
@@ -725,7 +728,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 throw new IllegalStateException(msg);
             }
 
-            if (!identityService.getIdentityProvider().tenantExists(asset.getRealm())) {
+            if (!identityService.getIdentityProvider().realmExists(asset.getRealm())) {
                 String msg = "Asset realm not found or is inactive: asset=" + asset;
                 LOG.info(msg);
                 throw new IllegalStateException(msg);
@@ -858,7 +861,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         Map<String, List<String>> gatewayIdAssetIdMap = new HashMap<>();
 
         if (!skipGatewayCheck) {
-            List<String> gatewayIds = ids.stream().filter(id -> gatewayService.isLocallyRegisteredGateway(id)).collect(Collectors.toList());
+            List<String> gatewayIds = ids.stream().filter(id -> gatewayService.isLocallyRegisteredGateway(id)).toList();
 
             if (!gatewayIds.isEmpty()) {
                 // Handle gateway asset deletion in a special way
@@ -1722,10 +1725,10 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         }
 
         if (!recursive || level == 3) {
-            if (query.tenant != null && !TextUtil.isNullOrEmpty(query.tenant.realm)) {
+            if (query.realm != null && !TextUtil.isNullOrEmpty(query.realm.name)) {
                 final int pos = binders.size() + 1;
                 sb.append(" and A.REALM = ?").append(pos);
-                binders.add((em, st) -> st.setParameter(pos, query.tenant.realm));
+                binders.add((em, st) -> st.setParameter(pos, query.realm.name));
             }
 
             if (query.userIds != null) {
